# email-validation

./: CLAUDE.md  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: release-drafter.yml
.github/workflows/: check.yaml  create_release.yaml  release_tags.yaml
email_validation/: __init__.py  cli.py
tests/: __init__.py  conftest.py  test_cli.py  test_csv_processing.py  test_email_validator.py
